--- a/Twitter/Launch Screen.storyboard
+++ b/Twitter/Launch Screen.storyboard
@@ -15,8 +15,17 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Twitter_Logo_Blue-1" translatesAutoresizingMaskIntoConstraints="NO" id="uiV-xj-oj0">
+                                <rect key="frame" x="-12.5" y="133.5" width="400" height="400"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="uiV-xj-oj0" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="KGa-IJ-R8z"/>
+                            <constraint firstItem="uiV-xj-oj0" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="hvL-AS-gYT"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +33,7 @@
             <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Twitter_Logo_Blue-1" width="400" height="400"/>
+    </resources>
 </document>
