--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -57,40 +57,54 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="130" id="p8u-ET-LDt" customClass="TweetCell" customModule="Twitter" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="130"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="180" id="p8u-ET-LDt" customClass="TweetCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="180"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="p8u-ET-LDt" id="6NZ-N3-byd">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="130"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="180"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gx7-Rp-Vze">
-                                            <rect key="frame" x="16" y="11" width="87" height="108"/>
+                                            <rect key="frame" x="16" y="11" width="87" height="116"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="87" id="Ufv-yi-LyF"/>
-                                                <constraint firstAttribute="height" constant="108" id="zWl-4r-Ndc"/>
+                                                <constraint firstAttribute="height" constant="116" id="zWl-4r-Ndc"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ajay" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d5y-5S-j8H">
-                                            <rect key="frame" x="113" y="11" width="236" height="21"/>
+                                            <rect key="frame" x="113" y="11" width="236" height="13"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tweet content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y1g-2I-8TG">
-                                            <rect key="frame" x="113" y="42" width="252" height="20.5"/>
+                                            <rect key="frame" x="113" y="34" width="252" height="85"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="85" id="62U-L0-EOJ"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1yK-td-h8B" userLabel="favButton">
+                                            <rect key="frame" x="319" y="129" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="30" id="7JX-nR-85h"/>
+                                                <constraint firstAttribute="height" constant="30" id="Ou9-qt-rt3"/>
+                                            </constraints>
+                                            <state key="normal" image="favor-icon"/>
+                                        </button>
                                     </subviews>
                                     <constraints>
                                         <constraint firstAttribute="trailingMargin" secondItem="d5y-5S-j8H" secondAttribute="trailing" constant="10" id="4Fx-LP-eET"/>
                                         <constraint firstItem="Y1g-2I-8TG" firstAttribute="top" secondItem="d5y-5S-j8H" secondAttribute="bottom" constant="10" id="56S-Td-qSB"/>
                                         <constraint firstItem="Y1g-2I-8TG" firstAttribute="leading" secondItem="gx7-Rp-Vze" secondAttribute="trailing" constant="10" id="7DI-Ve-c5a"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="gx7-Rp-Vze" secondAttribute="bottom" id="AIr-OV-buX"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="gx7-Rp-Vze" secondAttribute="bottom" constant="42" id="AIr-OV-buX"/>
+                                        <constraint firstItem="1yK-td-h8B" firstAttribute="top" secondItem="Y1g-2I-8TG" secondAttribute="bottom" constant="10" id="DIf-3d-ofm"/>
                                         <constraint firstItem="gx7-Rp-Vze" firstAttribute="top" secondItem="6NZ-N3-byd" secondAttribute="topMargin" id="PFS-xy-wJn"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="1yK-td-h8B" secondAttribute="trailing" constant="10" id="Q5I-wA-7Mg"/>
                                         <constraint firstItem="gx7-Rp-Vze" firstAttribute="leading" secondItem="6NZ-N3-byd" secondAttribute="leadingMargin" id="QOo-cC-SLv"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="1yK-td-h8B" secondAttribute="bottom" constant="10" id="TWm-aB-haO"/>
                                         <constraint firstAttribute="trailing" secondItem="Y1g-2I-8TG" secondAttribute="trailing" constant="10" id="Zas-Eh-6u5"/>
                                         <constraint firstItem="d5y-5S-j8H" firstAttribute="top" secondItem="6NZ-N3-byd" secondAttribute="topMargin" id="fvh-bs-DeR"/>
                                         <constraint firstItem="d5y-5S-j8H" firstAttribute="leading" secondItem="gx7-Rp-Vze" secondAttribute="trailing" constant="10" id="vyA-Pf-P6Y"/>
@@ -218,6 +232,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="favor-icon" width="30" height="30"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
